--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -128,26 +128,26 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/home-page.jpg" alt="image for homepage">
+        <img src="images/tackle-2.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Nature Park</h3>
       <p>
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/nature-park-1.jpg" alt="image for page">
+        <img src="images/nature-park-2.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Eagle Park</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/eagle-park-1.jpg" alt="image for page3">
+        <img src="images/eagle-park-2.jpg" alt="image for page3">
 
       </ul>
       <hr>
