--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -125,29 +125,47 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Looking for something fun to do in Rexburg? Enjoy fishing in the outdoors Without having to leave town. All you need is your rod and tackle box, no long drive or boat required. If fishing is your game, Rexburg has some great spots you should check out for a nice, close to home fishing trip.
       </p>
       <p>Images for the Home page</p>
         <img src="images/home-page.jpg" alt="image for homepage">
         <img src="images/tackle-2.jpg" alt="image for homepage">
 
       </ul>
-      <h3>Nature Park</h3>
+      <h3>Locations</h3>
       <p>
-        [Written copy for the Page 2 here]
+        These ponds are within Rexburg's 15-acre Nature Park. Situated above the South Teton River near Henrys Fork, the park has walking paths, a skate park, and picnic and play areas in a tranquil environment away from traffic for enjoyable fishing. The main species of fish you can expect to find in Nature Park are Rainbow Trout and Yellow Perch. <br>
+        <br>
+        Eagle Park is the western most park in Rexburg’s Teton River Corridor Park and Trail System. Eagle Park is a great place to enjoy a traditional camping experience, with 24 campsites for tent camping. Eagle Park has amenities such as drinkable water and bathrooms spread throughout the park. The Teton River flows the length of the park across from all the campsites. The main species of fish you can expect to find at eagle park are Rainbow Trout, Brown Trout, Cutthroat Trout, Mountain Whitefish, and Yellow Perch.
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/nature-park-1.jpg" alt="image for page">
-        <img src="images/nature-park-2.jpg" alt="image for page">
-
-      </ul>
-      <h3>Eagle Park</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
-      <p>Images for the Page 3</p>
+        <img src="images/nature-park-1.jpg" alt="image for page2">
+        <img src="images/nature-park-2.jpg" alt="image for page2">
         <img src="images/eagle-park-1.jpg" alt="image for page3">
         <img src="images/eagle-park-2.jpg" alt="image for page3">
+
+      </ul>
+      <h3>Fish and Lures</h3>
+      <p>
+        Rainbow Trout have on the back olive to greenish blue, belly white to silvery. Sides may show red or pink streak, white tip on pelvic (belly) and anal fin usually evident. Irregular spots on back, sides, head, dorsal fin and tail. Spots are more evenly distributed from head to tail on rainbow trout than cutthroat trout. <br>
+        Brown Trout has an elongated body that tapers at both ends. The body has a brown or yellow-brown hue with numerous spots below the lateral line. The spots on the upper body are typically black and surrounded by pale halos. Spots on the lower body are red. <br>
+        Cutthroat trout are members of the trout and salmon subgroup of Salmonidae family. Trout are one of the most popular freshwater species to fish for. They are also one of the best tasting freshwater fish. You can identify cutthroat trout by their golden-brown coloring and small black spots on their back and sides. They have a yellow-orange or red streaks around their gill plates and belly. Their upper jaw extends beyond their eye. Cutthroat trout differs from rainbow trout in that Cutthroat Trout have a set of basibranchial teeth at the base of their tongue and a maxillary that extends beyond the posterior edge of the eye. Cutthroat trout can grow up to 41 lbs., 39 inches long. They are more commonly found in in the 0.5-8 lb. range or 8-22″ long. <br>
+        <br>
+        Best baits and lures for Rainbow/Brown/Cutthroat Trout: Worms, Minnows, Salmon Eggs, Powerbait, In-line Spinners, Spoons, Flies, Micro Jigs, Jerk Bait <br>
+        <br>
+        The Oregon or Rocky Mountain whitefish is closely related to the trout and chars and is often included in this family. Features: Trout-like in appearance, the body is silvery in color with a bronze or dark back. They can be distinguished from trout by the forked tail and the small, down-turned mouth. <br>
+        <br>
+        Best baits and lures for Mountain Whitefish: Worms, Maggots, Mealworms, Salmon Eggs, Micro Jigs, Inline Spinners (1/8oz), Spoons (1/8oz), Flies <br>
+        <br>
+        Yellow perch are most commonly found in clear water near vegetation and tend to school near the shore during the spring. The common length for yellow perch is 7.5 inches with the longest reported length for yellow perch being 19.7 inches. Yellow perch are typically yellow to gold colored with 6 to 8 distinctive triangular shaped olive-green stripes along their sides. <br>
+        <br>
+        Best baits and lures for Yellow Perch: Worms, Minnows, Larvae, Crayfish, Jigs (1 to2 inches in length), Crankbaits (smaller is better), Spinners, Spoons
+      </p>
+      <p>Images for the Page 3</p>
+        <img src="images/trout-1.jpg" alt="image for page3">
+        <img src="images/trout-2.jpg" alt="image for page3">
+        <img src="images/yellow-perch.jpg" alt="image for page3">
+        <img src="images/whitefish.jpg" alt="image for page3">
 
       </ul>
       <hr>
