--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -136,7 +136,7 @@
       <p>
         These ponds are within Rexburg's 15-acre Nature Park. Situated above the South Teton River near Henrys Fork, the park has walking paths, a skate park, and picnic and play areas in a tranquil environment away from traffic for enjoyable fishing. The main species of fish you can expect to find in Nature Park are Rainbow Trout and Yellow Perch. <br>
         <br>
-        Eagle Park is the western most park in Rexburg’s Teton River Corridor Park and Trail System. Eagle Park is a great place to enjoy a traditional camping experience, with 24 campsites for tent camping. Eagle Park has amenities such as drinkable water and bathrooms spread throughout the park. The Teton River flows the length of the park across from all the campsites. The main species of fish you can expect to find at eagle park are Rainbow Trout, Brown Trout, Cutthroat Trout, Mountain Whitefish, and Yellow Perch.
+        Eagle Park is the western most park in Rexburg's Teton River Corridor Park and Trail System. Eagle Park is a great place to enjoy a traditional camping experience, with 24 campsites for tent camping. Eagle Park has amenities such as drinkable water and bathrooms spread throughout the park. The Teton River flows the length of the park across from all the campsites. The main species of fish you can expect to find at eagle park are Rainbow Trout, Brown Trout, Cutthroat Trout, Mountain Whitefish, and Yellow Perch.
       </p>
       <p>Images for the Page 2</p>
         <img src="images/nature-park-1.jpg" alt="image for page2">
@@ -177,23 +177,25 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [I would like to make the two images with the Nature Park and Eagle Park titles links to their respactive section and the image with the Fish and Lures title to be a link to page 3]
       </p>
       <!-- link https://wireframe.cc/QrIWiy -->
       <img src="#" alt="home page wireframe">
-
-      <h3>[Page 2]</h3>
+      <a href="https://wireframe.cc/QrIWiy">https://wireframe.cc/QrIWiy</a>
+      <h3>Locations</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [The GPS icons next to the location names will be links to the locations]
       </p>
       <!-- link https://wireframe.cc/frjurU -->
       <img src="#" alt="page 2 wireframe">
-
-      <h3>[Page 3]</h3>
+      <a href="https://wireframe.cc/frjurU">https://wireframe.cc/frjurU</a>
+      <h3>Fish and Lures</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
+      <!-- link https://wireframe.cc/USeMJu -->
       <img src="#" alt="page 3 wireframe">
+      <a href="https://wireframe.cc/USeMJu">https://wireframe.cc/USeMJu</a>
     </main>
   </body>
 
