--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -87,9 +87,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Location</a>
-        <a href="#">Fish and Lures</a>
+        <a href="index.html">Home</a>
+        <a href="locations.html">Location</a>
+        <a href="fish-and-lures.html">Fish and Lures</a>
       </nav>
       <hr>
       <h2>
@@ -147,9 +147,9 @@
       </ul>
       <h3>Fish and Lures</h3>
       <p>
-        Rainbow Trout have on the back olive to greenish blue, belly white to silvery. Sides may show red or pink streak, white tip on pelvic (belly) and anal fin usually evident. Irregular spots on back, sides, head, dorsal fin and tail. Spots are more evenly distributed from head to tail on rainbow trout than cutthroat trout. <br>
-        Brown Trout has an elongated body that tapers at both ends. The body has a brown or yellow-brown hue with numerous spots below the lateral line. The spots on the upper body are typically black and surrounded by pale halos. Spots on the lower body are red. <br>
-        Cutthroat trout are members of the trout and salmon subgroup of Salmonidae family. Trout are one of the most popular freshwater species to fish for. They are also one of the best tasting freshwater fish. You can identify cutthroat trout by their golden-brown coloring and small black spots on their back and sides. They have a yellow-orange or red streaks around their gill plates and belly. Their upper jaw extends beyond their eye. Cutthroat trout differs from rainbow trout in that Cutthroat Trout have a set of basibranchial teeth at the base of their tongue and a maxillary that extends beyond the posterior edge of the eye. Cutthroat trout can grow up to 41 lbs., 39 inches long. They are more commonly found in in the 0.5-8 lb. range or 8-22″ long. <br>
+        Rainbow Trout have on the back olive to greenish blue, belly white to silvery. Sides may show red or pink streak, white tip on pelvic (belly) and anal fin usually evident. Irregular spots on back, sides, head, dorsal fin and tail. Spots are more evenly distributed from head to tail on rainbow trout than cutthroat trout. They average about 20 to 30 inches long and around 8 pounds. <br>
+        A Brown Trout has an elongated body that tapers at both ends. The body has a brown or yellow-brown hue with numerous spots below the lateral line. The spots on the upper body are typically black and surrounded by pale halos. Spots on the lower body are red. Adult Brown Trout usually grow to between 15 and 22 inches in length and between 1 and 5 pounds, depending on a variety of factors mostly related to habitat and genetics. <br>
+        You can identify cutthroat trout by their golden-brown coloring and small black spots on their back and sides. They have a yellow-orange or red streaks around their gill plates and belly. Their upper jaw extends beyond their eye. Cutthroat trout differs from rainbow trout in that Cutthroat Trout have a set of basibranchial teeth at the base of their tongue and a maxillary that extends beyond the posterior edge of the eye. Cutthroat trout can grow up to 41 lbs. and 39 inches long. <br>
         <br>
         Best baits and lures for Rainbow/Brown/Cutthroat Trout: Worms, Minnows, Salmon Eggs, Powerbait, In-line Spinners, Spoons, Flies, Micro Jigs, Jerk Bait <br>
         <br>
