--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -59,15 +59,17 @@
                 <h2>Fish and Lures</h2>
             </section>
 
-            
+            <div id="background"></div>
+
+            <img class="fishing" src="images/home-page-2.jpg" alt="Guy Caught a Fish">
+
             <section class="msg">
-                <img class="fishing" src="images/home-page-2.jpg" alt="Guy Caught a Fish">
                 <h2> Come Join the fun!</h2>
                 <p>
                     Looking for something fun to do in Rexburg? Enjoy fishing in the outdoors Without having to leave town. All you need is your rod and tackle box, no long drive or boat required. If fishing is your game, Rexburg has some great spots you should check out for a nice, close to home fishing trip. 
                 </p>
             </section>
-
+            
         </main>
 
         <footer>
