--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -31,7 +31,7 @@
             </div>
     
             <section id="hero-msg">
-                <h1 class="home-title">Every Day is a Great Day for Fishing When You're in Rexburg</h1>
+                <h1 class="home-title">Every Day is a Great Day for Fishing When You're in Rexburg!</h1>
             </section>
     
         </div>
