--- a/finalproject/locations.html
+++ b/finalproject/locations.html
@@ -32,7 +32,7 @@
                 <a href="https://goo.gl/maps/LTMX1eERM97QhbrD8" target="_blank">
                     <img src="images/icons8-google-maps-48.png" alt="gps icon">
                 </a>
-                <img src="images/nature-park-1.jpg" alt="Nature Park">
+                <img class="nature-park-img" src="images/nature-park-1.jpg" alt="Nature Park">
 
                 <p>
                     These ponds are within Rexburg's 15-acre Nature Park. Situated above the South Teton River near Henrys Fork, the park has walking paths, a skate park, and picnic and play areas in a tranquil environment away from traffic for enjoyable fishing. The main species of fish you can expect to find in Nature Park are Rainbow Trout and Yellow Perch.
@@ -46,7 +46,7 @@
                 <a href="https://goo.gl/maps/scdfyUGK7C61VRKK9" target="_blank">
                     <img src="images/icons8-google-maps-48.png" alt="gps icon">
                 </a>
-                <img src="images/eagle-park-1.jpg" alt="Eagle Park">
+                <img class="eagle-park-img" src="images/eagle-park-1.jpg" alt="Eagle Park">
 
                 <p>
                     Eagle Park is the western most park in Rexburg's Teton River Corridor Park and Trail System. Eagle Park is a great place to enjoy a traditional camping experience, with 24 campsites for tent camping. Eagle Park has amenities such as drinkable water and bathrooms spread throughout the park. The Teton River flows the length of the park across from all the campsites. The main species of fish you can expect to find at eagle park are Rainbow Trout, Brown Trout, Cutthroat Trout, Mountain Whitefish, and Yellow Perch.
@@ -57,8 +57,8 @@
             <section class="fish-lures">
                 <a href="fish-and-lures.html">
                     <img src="images/tackle-1.jpg" alt="Tackle Box">
+                    <h2>Come find out more about the fish at these locations and how to catch them!</h2>
                 </a>
-                <h2>Come find out more about the fish at these locations and how to catch them?</h2>
             </section>
 
         </main>
